fix: tests an checkstyle
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier@rte-france.com>